@@ -2,3 +2,4 @@
 --add-exports=java.xml/com.sun.org.apache.xerces.internal.util=ALL-UNNAMED
 --add-opens=java.base/java.util=ALL-UNNAMED
 --add-opens=java.base/java.lang=ALL-UNNAMED
+--add-opens=java.base/java.lang.reflect=ALL-UNNAMED
